Продвинулся в описании эндпоинтов
